develop: add characterId
